# nanuk

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  dev.sh  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  devcontainer.yml  pages.yml
benchmarks/: README.md  coverage.md
benchmarks/e2e/: README.md  build_and_run.sh  build_component.sh  nanuk_demo.py  nanuk_demo_siit.py  nanuk_run.sh  nanuk_switch.cc  run_beat3.sh  run_beats12.sh  run_siit.sh  siit_responder.py
benchmarks/siit/: README.md  audit.md  fetch_jool.sh  gen_jool_replay.py  gen_vectors.py  jool-replay.md
book/: README.md  book.toml
book/src/: 01-parser-isa.md  02-sail-spec.md  03-two-processors.md  04-map-isa.md  05-rtl-cosim.md  06-the-switch.md  07-asm-iss.md  08-ir.md  09-lang.md  10-symex.md  11-playground.md  12-benchmarks.md  13-siit.md  SUMMARY.md  a-doctrines.md  introduction.md
compiler/: gen.py  pyproject.toml
compiler/nanuk_ir/: __init__.py  interp.py  interp_map.py  lower.py  lower_map.py  nanuk_ir.proto  nanuk_ir_pb2.py  validate.py
compiler/tests/: irbuild.py  test_differential.py  test_differential_map.py  test_interp.py  test_interp_trace.py  test_lower.py  test_lower_map.py  test_lower_regmap.py  test_roundtrip.py  test_standalone.py  test_symex.py  test_validate.py  test_validate_map.py
demo/: README.md  build_and_run.sh  build_component.sh  nanuk_demo.py  nanuk_demo_tunnel.py  nanuk_hw.cc  nanuk_run.sh  nanuk_switch.cc  rules.mk  run_beat3.sh  run_beats12.sh
docs/: development.md
docs/notes/: 2026-07-11-interpreter-playground-lab-notes.md  2026-07-11-m1-map-isa-lab-notes.md  2026-07-11-m2-map-rtl-lab-notes.md  2026-07-11-playground-v2-lab-notes.md  2026-07-11-stage4-lab-notes.md  2026-07-11-symex-lab-notes.md  2026-07-12-core-redesign-lab-notes.md  2026-07-12-topology-naming-lab-notes.md  2026-07-13-benchmark-suite-lab-notes.md  2026-07-18-book-toolchain-survey.md  2026-07-18-demo-application-survey.md  2026-07-18-siit-core-lab-notes.md
examples/: README.md
examples/calc/: calc.asm  calc.py  parse.asm
examples/icmp_echo/: parse.asm  reply.asm
examples/l2l3l4/: parse.asm  parse.py
examples/map_l2fwd/: fwd.asm  fwd.py
examples/map_ttl/: fwd.asm  fwd.py
examples/mpls_sp/: parse.asm
examples/nanukproto/: README.md  parse.py  parse_tunnel.asm  tunnel.py  tunnel_pop.asm  tunnel_push.asm
examples/overlay_dc/: parse.asm
examples/siit/: README.md  parse.asm  parse.py  translate.asm  translate.py
examples/srcroute/: fwd.asm  parse.asm
examples/union/: parse.asm
guide/notes/: 2026-07-11-m1-map-isa-lab-notes.md  2026-07-11-m3-map-lang-lab-notes.md  2026-07-11-stage4-lab-notes.md
hw/: export.py  pyproject.toml
hw/amaranth/: pyproject.toml
hw/amaranth/nanuk_amaranth/: __init__.py  core.py  export.py  map.py  map_core.py  map_sim_util.py  pp.py  pp_sim_util.py  sim_util.py
hw/amaranth/tests/: test_core.py  test_cosim.py  test_fuzz.py  test_map.py  test_map_core.py  test_map_cosim.py  test_pp.py  test_pp_cosim.py  test_siit_cosim.py
hw/nanuk_hw/: core.py  map_core.py  map_sim_util.py  sim_util.py
hw/simbricks/: README.md  build_and_run.sh  build_component.sh  nanuk_demo.py  nanuk_demo_tunnel.py  nanuk_hw.cc  nanuk_run.sh  rules.mk  run_beat3.sh  run_beats12.sh
hw/tests/: conftest.py  test_core.py  test_cosim.py  test_fuzz.py  test_map_core.py  test_map_cosim.py
lang/: pyproject.toml
lang/nanuk_lang/: __init__.py  compile.py  map_program.py  parser.py
lang/nanuk_lang/programs/: l2l3l4.py  map_demos.py
lang/tests/: test_compile.py  test_header.py  test_interp_parity.py  test_ir.py  test_iss_parity.py  test_map_parity.py  test_map_program.py  test_nanukproto.py  test_parity.py  test_symex_parity.py
python/: pyproject.toml
python/nanuk/: __init__.py
python/scripts/: gen.py
sail/emulator/: entry.sail
spec/emulator/: main.c  smoke_test.sh
spec/isa/: pyproject.toml
spec/isa/nanuk_isa/: iss.py  iss_map.py  map_asm.py
spec/isa/tests/: test_asm.py  test_encoding.py  test_iss.py  test_iss_map.py  test_map_asm.py  test_map_encoding.py
spec/map-model/: api.sail  decode.sail  exec.sail  insts.sail  main.sail
spec/map-test/: CMakeLists.txt  test_map_exec_csum.sail  test_map_exec_lookup.sail  test_map_exec_mem.sail
spec/model/: api.sail  main.sail  params.sail
spec/parser-model/: prelude.sail  state.sail
spec/parser-test/: CMakeLists.txt  test_exec_control.sail  test_exec_linear.sail
spec/proto/: buf.yaml
spec/python/: pyproject.toml
spec/python/nanuk_spec/: _asm_core.py  asm.py  encoding.py  harness.py  map_asm.py  testkit.py
spec/python/tests/: test_asm.py  test_demo.py  test_encoding.py  test_harness.py  test_iss_differential.py  test_iss_map_differential.py  test_map_asm.py  test_map_demo_l2fwd.py  test_map_demo_ttl.py  test_map_demo_tunnel.py  test_map_encoding.py  test_map_harness.py
spec/sail/: CMakeLists.txt
spec/sail/emulator/: map_main.c  map_smoke_test.sh  pp_main.c
spec/sail/model/map/: api.sail  decode.sail  exec.sail  insts.sail  main.sail  params.sail  prelude.sail  state.sail  types.sail
spec/sail/model/parser/: decode.sail  insts.sail  types.sail
spec/sail/model/pp/: api.sail  decode.sail  insts.sail  main.sail  params.sail  state.sail  types.sail
spec/sail/test/map/: CMakeLists.txt  test_map_decode.sail  test_map_exec_control.sail  test_map_exec_csum.sail  test_map_exec_mem.sail
spec/sail/test/parser/: CMakeLists.txt  test_decode.sail
spec/sail/test/pp/: CMakeLists.txt  test_decode.sail  test_exec_control.sail  test_state.sail
spec/test/: CMakeLists.txt  test_state.sail
sw/python/: pyproject.toml
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: bridge.py  presets.json
web/py/: bridge.py  pyproject.toml
web/py/tests/: conftest.py  test_bridge.py  test_map_bridge.py  test_presets.py  test_render.py  test_siit_bridge.py  test_trace_bridge.py
web/scripts/: build_wheels.sh  gen_presets.py
web/site/: index.html  shared.css
web/src/: App.svelte  app.css  vite-env.d.ts
web/tests/: pyodide.test.ts
(+251 files in other folders)
