[project]
name = "nanuk-hw"
version = "0.1.0"
description = "nanuk parser RTL: Amaranth core and switch, cosimulated against the Sail golden model"
requires-python = ">=3.12"
dependencies = [
    "amaranth[builtin-yosys]>=0.5",
    "nanuk-spec",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.uv.sources]
nanuk-spec = { path = "../spec/python", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nanuk_hw"]
