[project]
name = "nanuk-lang"
version = "0.1.0"
description = "nanuk parser eDSL: protocol-level parser descriptions compiled to nanuk assembly"
requires-python = ">=3.12"
dependencies = [
    "nanuk-ir",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "nanuk-isa",
    "nanuk-spec",
    "scapy>=2.5",
    "z3-solver>=4.16.0.0",
]

[tool.uv.sources]
nanuk-ir = { path = "../compiler", editable = true }
nanuk-isa = { path = "../spec/isa", editable = true }
nanuk-spec = { path = "../spec/python", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nanuk_lang"]
