[project]
name = "nanuk-isa"
version = "0.1.0"
description = "nanuk ISA v0 mirror: assemblers, encodings, and instruction-set simulators for both engines"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
nanuk-asm = "nanuk_isa.asm:main"
nanuk-map-asm = "nanuk_isa.map_asm:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.15.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nanuk_isa"]
