[project]
name = "nanuk-spec"
version = "0.1.0"
description = "nanuk parser ISA v0: assembler and golden-model pcap harness"
requires-python = ">=3.12"
dependencies = [
    "scapy>=2.5",
]

[project.scripts]
nanuk-asm = "nanuk_spec.asm:main"

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nanuk_spec"]
