[project]
name = "nanuk-spec"
version = "0.1.0"
description = "nanuk parser ISA v0: assembler and golden-model pcap harness"
requires-python = ">=3.12"
dependencies = [
    "nanuk-isa",
    "scapy>=2.5",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.15.21",
]

[tool.uv.sources]
nanuk-isa = { path = "../isa", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nanuk_spec"]
