[project]
name = "nanuk-playground-bridge"
version = "0.1.0"
description = "Python side of the nanuk playground: compile/run/provenance inside Pyodide"
requires-python = ">=3.12"
dependencies = [
    "nanuk-ir",
    "nanuk-isa",
    "nanuk-lang",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.uv.sources]
nanuk-ir = { path = "../../compiler", editable = true }
nanuk-isa = { path = "../../spec/isa", editable = true }
nanuk-lang = { path = "../../lang", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
